Fix misaligned search form in top bar
Add flexbox to align the search form's input and button.

Bug: T362461

--- a/assets/stylesheets/foreground.css
+++ b/assets/stylesheets/foreground.css
@@ -782,6 +782,11 @@ button,
 	vertical-align: middle;
 }
 
+.skin-foreground-search {
+	display: flex;
+	align-items: end;
+}
+
 .top-bar .button.search {
 	top: 0;
 }
